# bachelor_projekt

./: .gitignore  CMakeLists.txt  CourtCaseScheduler  CourtScheduler  build.ps1  graph_sol_runtime_log_BFS.csv  graph_sol_runtime_log_DFS.csv  quality_test.json  requirements.txt  run_energy_funnel_viz.py  scheduleSnapshot.prf  temp_output_2140.txt  test_contracting_integration.py  test_sa_contracting.py
benchmark_tests/: 3D_landscape.ipynb  old_tests.py
benchmark_tests/log_files/: temp_output_160.txt  temp_output_2000.txt  temp_output_210.txt  temp_output_2510.txt  temp_output_50.txt  temp_output_860.txt
docs/: development_log.md  problem_description.md  project_agreement.md  project_log.md
docs/logs/: development_log.md  project_log.md
docs/problem_description/: problem_definition.md  project_aim.md
docs/rules/: rule_sheet.md  rules_table.md
scripts/: Scalability_graph_LS_ILP.csv  benchmark_local_search.py  graph_scalability_benchmark.py  graph_sol_runtime_log.csv  ilp_scalability_benchmark.sh  local_search_runtime_log.csv  ls_scalability_benchmark.py  ls_scalability_benchmark_bash.sh  plot_alpha_K.ipynb  plot_graph_b.py  plot_scalability.ipynb  plot_scalability_graph_and_LS.py  run_1000_rules_tests.sh  run_tests.sh  scalability_graph_LS.csv  setup_env.sh  simplex_visualization_plot.py
src/: __init__.py  calendar_visualizer.py  coloring.hpp  coloring.py  data_generator.py  graph.hpp  graph.py  judge.hpp  main.cpp  main.py  matching.hpp  matching.py  meeting.hpp  model.py  models.py  node.hpp  parser.py  room.hpp  rules_engine.py  schedule.hpp  schedule.py
src/base_model/: appointment.py  attribute_enum.py  capacity_calculator.py  case.py  compatibility_checks.py  judge.py  room.py  (+2 more)
test_data/: scrape_script.py  visualizer.ipynb
tests/: __init__.py  test_contracting_move.py  test_contracting_move_stress.py  test_data_generator.py  test_gap_scoring.py  test_ilp_solver.py  test_matching.py  test_model.py  test_models.py  test_move_generation.py  test_room_capacity_calculation.py  test_ruin_and_recreate.py  test_rules_engine.py
(+73 files in other folders)
